FactorialRecovery + FactorialNumber + Tests.ver5