@@ -3,24 +3,27 @@ package com.datart.it.leaders.core.lib.model.factorial;
 import org.junit.Assert;
 import org.junit.Test;
 
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.LinkedList;
-import java.util.List;
+
 
 public class FactorialRecoveryTest {
 
     @Test
     public void whenFN4020Then13542() {
-        List<Integer> linkedListInit = List.of(4, 0, 2, 0);
-        List<Integer> arrayListInit = List.of(1, 2, 3, 4, 5);
-        List<Integer> rslarrayListInit = List.of(1, 3, 5, 4, 2);
-        LinkedList<Integer> factorialNumber = new LinkedList<>(linkedListInit);
-        LinkedList<Integer> firstRearengment = new LinkedList<>(arrayListInit);
-        LinkedList<Integer> rslRearengment = new LinkedList<>(rslarrayListInit);
-        FactorialNumber fN = new FactorialNumber(factorialNumber);
-        FactorialRecovery factorialRecovery = new FactorialRecovery(firstRearengment);
+        LinkedList<Integer> rslRearengment = new LinkedList<>(Arrays.asList(1, 3, 5, 4, 2));
+        FactorialNumber fN = new FactorialNumber(new LinkedList<>(Arrays.asList(4, 0, 2, 0)));
+        FactorialRecovery factorialRecovery = new FactorialRecovery(new LinkedList<>(Arrays.asList(1, 2, 3, 4, 5)));
         LinkedList<Integer> rslOfFR = factorialRecovery.recoveryByFactorialNumber(fN);
         Assert.assertEquals(rslRearengment, rslOfFR);
     }
 
+    @Test
+    public void whenFN1Then13542() {
+        LinkedList<Integer> rslRearengment = new LinkedList<>(Arrays.asList(4, 5, 3, 2, 1));
+        FactorialNumber fN = new FactorialNumber(new LinkedList<>(Arrays.asList(1)));
+        FactorialRecovery factorialRecovery = new FactorialRecovery(new LinkedList<>(Arrays.asList(1, 2, 3, 4, 5)));
+        LinkedList<Integer> rslOfFR = factorialRecovery.recoveryByFactorialNumber(fN);
+        Assert.assertEquals(rslRearengment, rslOfFR);
+    }
 }
